@@ -1,3 +1,8 @@
+1999-09-26  Harri Porten  <porten@kde.org>
+
+	* runtests.cpp (ppp_available): Linux kernels >= 2.2.13 will have
+	a security hole fixed that breaks our check. Let's simply return true.
+
 1999-08-31  Harri Porten  <porten@kde.org>
 
 	* opener.cpp: unified PAP and CHAP code
